--- a/src/styles/constant.scss
+++ b/src/styles/constant.scss
@@ -5,3 +5,5 @@ $dark-blue: #061F43;
 $blue: #08458C;
 $light-green: #67C0A7;
 $light-blue: #2D81AC;
+$black: #01010B;
+$form-background-color: rgba(1, 1, 11, .9);
