--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,27 +1,6 @@
-<div class="container">
-	{{> Button label="Sign up" type="link" }}
-	{{test}}
-	<div className='auth-page'>
-		<div className="auth-form">
-			<h2 className="auth-form__title">{Вход}</h2>
-			<form className="form" >
-				<label className="form__field">
-					<input type="email" id="email" name="name" placeholder="Email"
-						className="form__input form__input_dark-theme" 
-						required />
-					<span className="name-input-error form__input-error" />
-				</label>
-				<label className="form__field">
-					<input type="password" id="password" name="link" placeholder="Пароль"
-						className="form__input form__input_dark-theme" 
-						required />
-					<span className="link-input-error form__input-error" />
-				</label>
-					{{> Button label="Авторизоваться"}}
-
-				<Link to="/sign-in" className="auth-form__save-btn-subtitle">{Sign up}
-				</Link>
-			</form>
-		</div>
+<div class="login-page">
+	<div class="login-form">
+		<h2 class="login-form__title">{{formTitle}}</h2>
+		{{> Form}}
 	</div>
 </div>
