--- a/src/components/form/form.hbs
+++ b/src/components/form/form.hbs
@@ -7,6 +7,6 @@
 
     <div class="form__btns">
         {{> Button label=submitTitle type="button"}}
-        <a class="form__link" href={{navigateTo}} navigateTo={{navigateTo}}>{{linkTitle}}</a>
+        <a class="link form__link" href="#" navigateTo={{navigateTo}}>{{linkTitle}}</a>
     </div>
 </form>
