--- a/src/styles/constant.scss
+++ b/src/styles/constant.scss
@@ -7,3 +7,7 @@ $light-green: #67C0A7;
 $light-blue: #2D81AC;
 $black: #01010B;
 $form-background-color: rgba(1, 1, 11, .9);
+
+.link {
+    text-decoration: none;
+}
