--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,10 +1,10 @@
-@use '../../styles/constant' as var;
+@use '../../styles/common' as var;
 
 .button {
     background-color: var.$accent-color;
     color: white;
     border-radius: 8px;
-    padding: 13px;
+    padding: 7px;
     border: none;
     letter-spacing: 0.04em;
 
