--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,4 @@
-@import url(./styles/constant.scss);
+@import url(./styles/common.scss);
 @import url(./styles/normalize.css);
 @import url(./components/button/button.scss);
 @import url(../src/assets/fonts/caveat/caveat.css);
