add others page

--- a/src/components/chat/chat.hbs
+++ b/src/components/chat/chat.hbs
@@ -1,9 +1,9 @@
 <div class="chat">
     <div class="chat__header">
-        <div class="profile">
-            <img class="profile__avatar avatar"
+        <div class="interlocutor">
+            <img class="interlocutor__avatar avatar"
                 src="https://cdn.justjared.com/wp-content/uploads/headlines/2023/07/ryan-gosling-push-song-barbie-tea.jpg">
-            <p class='profile__name'>
+            <p class="interlocutor__name">
                 Ken-1
             </p>
         </div>
