--- a/src/components/form/form.hbs
+++ b/src/components/form/form.hbs
@@ -6,7 +6,7 @@
     </div>
 
     <div class="form__btns">
-        {{> Button label=submitTitle type="button"}}
+        {{> Button label=submitTitle type="button" navigateTo="chats"}}
         <a class="link form__link" href="#" navigateTo={{navigateTo}}>{{linkTitle}}</a>
     </div>
 </form>
