--- a/src/pages/chats/chats.hbs
+++ b/src/pages/chats/chats.hbs
@@ -1,6 +1,6 @@
 <div class="chats-page">
 	<section class="chats-page__left">
-		<a class="link chats-page__link" href="#" navigateTo={{navigateTo}}>Профиль &gt;</a>
+		<a class="link chats-page__link" href="#" navigateTo="profile">Профиль &gt;</a>
 		{{> Button label='Поиск'}}
 		{{#each (chats)}}
 			{{> ChatInfo }}
