--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -10,6 +10,10 @@ $grey: #999999;
 $form-background-color: rgba(1, 1, 11, .9);
 $gradient: linear-gradient($dark-green, $blue);
 
+body {
+    font-family: Inter, Arial, Helvetica, sans-serif;
+}
+
 .link {
     text-decoration: none;
 }
@@ -22,4 +26,26 @@ $gradient: linear-gradient($dark-green, $blue);
 
 .btn {
     cursor: pointer;
+}
+
+.app {
+    &__navigation {
+        display: flex;
+        flex-direction: column;
+        align-items:flex-start;
+        color: $accent-color;
+        width: 100%;
+        height: 100vh;
+        background: url(https://media.filmz.ru/photos/full/filmz.ru_f_90730.jpg);
+        background-size: cover;
+        padding-left: 20px;
+        padding-top: 20px;
+        box-sizing: border-box;
+    }
+    
+    &__link {
+        color: $accent-color;
+        font-size: 60px;
+        font-family: Caveat, Arial, Helvetica, sans-serif;
+    }
 }
