--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -1,5 +1,5 @@
 <div class="profile-page">
-    <button class="profile-page__back-btn" navigateTo="chats"></button>
+    <button class="profile-page__back-btn btn" navigateTo="chats"></button>
 
     <div class="profile-page__container">
         <img class="avatar profile-page__avatar "
