--- a/src/assets/fonts/caveat/caveat.css
+++ b/src/assets/fonts/caveat/caveat.css
@@ -1,7 +1,7 @@
 @font-face {
-    font-family: 'Caveat';
-    font-style:  normal;
+    font-family: "Caveat";
+    font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("Caveat-Regular.ttf") format("truetype")
+    src: url("Caveat-Regular.ttf") format("truetype");
 }
