--- a/src/pages/chats/chats.scss
+++ b/src/pages/chats/chats.scss
@@ -1,4 +1,4 @@
-@use '../../styles/common' as var;
+@use "../../styles/common" as var;
 
 .chats-page {
     display: flex;
@@ -49,5 +49,4 @@
         margin-top: 21px;
         margin-bottom: 30px;
     }
-
 }
