--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,13 +1,13 @@
-$accent-color: #EE1A8B ;
-$error-color: #FF3030;
+$accent-color: #ee1a8b;
+$error-color: #ff3030;
 $dark-green: #082127;
-$dark-blue: #061F43;
-$blue: #08458C;
-$light-green: #67C0A7;
-$light-blue: #2D81AC;
-$black: #01010B;
+$dark-blue: #061f43;
+$blue: #08458c;
+$light-green: #67c0a7;
+$light-blue: #2d81ac;
+$black: #01010b;
 $grey: #999999;
-$form-background-color: rgba(1, 1, 11, .9);
+$form-background-color: rgba(1, 1, 11, 0.9);
 $gradient: linear-gradient($dark-green, $blue);
 
 body {
@@ -32,7 +32,7 @@ body {
     &__navigation {
         display: flex;
         flex-direction: column;
-        align-items:flex-start;
+        align-items: flex-start;
         color: $accent-color;
         width: 100%;
         height: 100vh;
@@ -42,7 +42,7 @@ body {
         padding-top: 20px;
         box-sizing: border-box;
     }
-    
+
     &__link {
         color: $accent-color;
         font-size: 60px;
