--- a/src/components/settingInput/settingInput.hbs
+++ b/src/components/settingInput/settingInput.hbs
@@ -1,5 +1,6 @@
 <label class="setting-input">
     {{labelText}}
+    {{{disabled}}}
     <input class="setting-input__input" {{#if disabled}} disabled {{/if}} type={{type}} name={{name}} {{#if value}} value={{value}} {{/if}}>
     {{#if error}}
         <span class="setting-input__input-error">{{error}}</span>
