--- a/src/pages/chats/chats.hbs
+++ b/src/pages/chats/chats.hbs
@@ -1,12 +1,12 @@
 <div class="chats-page">
 	<section class="chats-page__left">
 		<a class="link chats-page__link" href="#" navigateTo="profile">Профиль &gt;</a>
-		{{> Button label='Поиск'}}
-		{{#each (chats)}}
-			{{> ChatInfo }}
+		{{{ Button label='Поиск'}}}
+		{{#each chats}}
+			{{{ ChatInfo name=name avatar=avatar lastMessage=lastMessage time=time unreadCount=unreadCount}}}
 		{{/each}}
 	</section>
 	<section class="chats-page__right">
-		{{> Chat }}
+		{{{ Chat }}}
 	</section>
 </div>
