--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,6 +1,6 @@
 <div class="login-page">
 	<div class="login-form">
 		<h2 class="login-form__title">{{formTitle}}</h2>
-		{{> Form}}
+		{{{ Form config=formConfig}}}
 	</div>
 </div>
